Removed ~proxies text and referred to IT&PR as features in 20% stat

--- a/main.tex
+++ b/main.tex
@@ -174,9 +174,9 @@
         \textbf{Issue Tickets} / \textbf{Pull Requests} in 10 larger RS repositories 
         \vspace{1em}
 
-        \hspace{1em} Does \textbf{Assignment} \thickapprox  \textit{responsibility}?  
+        % \hspace{1em} Does \textbf{Assignment} \thickapprox  \textit{responsibility}?  
 
-        \hspace{1em} Do \textbf{Commits} \thickapprox \textit{activity}? 
+        % \hspace{1em} Do \textbf{Commits} \thickapprox \textit{activity}? 
         
         % \begin{tikzfigure}[]
         %     \includegraphics[width=0.80\linewidth]{AssignmentCategories.jpg}
@@ -195,8 +195,7 @@
         \includegraphics[width=0.9\linewidth]{AverageCommitsByCategory.jpg}
     \end{tikzfigure}
     
-    Only $\sim$20\% assigned to BOTH Issue Tickets \\
-    \underline{and} Pull Requests... 
+    Only $\sim$20\% assigned to BOTH features...
     
     \vspace{0.20em}
     ... But their commit numbers are \textit{much higher...}\par 
