change italics for emphasis on stat

--- a/main.tex
+++ b/main.tex
@@ -198,7 +198,7 @@
     Only $\sim$20\% assigned to BOTH features...
     
     \vspace{0.20em}
-    ... But their commit averages are \textit{much higher...}\par 
+    ... But their commit averages are \textit{\textbf{much higher}...}\par 
 
     \vspace{1em}
     %\hspace{1em} 
