Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -226,10 +226,10 @@
     
     \begin{tikzfigure}[Exploring developer impact using item assignment \\ and contributions data in 10 RS repositories]
         %\setlength{\belowcaptionskip}{-8pt}
-        \includegraphics[width=0.85\linewidth]{AverageCommitsByCategory.jpg}
+        \includegraphics[width=0.92\linewidth]{AverageCommitsByCategory.jpg}
     \end{tikzfigure}  
 
-    \vspace*{1em}
+    \vspace*{0.5em}
 
     \textbf{Personas may explain developer influences} on:  
     %\vspace{0.25em}
@@ -242,7 +242,7 @@
      \end{itemize}
      \par
 
-     \vspace*{0.7em}
+     %\vspace*{0.7em}
     
     }
     
