Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -181,7 +181,7 @@
     {\fontsize{73}{73}\selectfont 
     Mining GitHub repositories \textbf{assignment data} and \textbf{commit contributions} to identify \textbf{`superstar' developers}...} \par
         
-    \vspace{3em}
+    \vspace{4em}
         
     {\fontsize{68}{68}\selectfont 
         \textbf{Issue Tickets} / \textbf{Pull Requests} in 10 larger RS repositories \par
@@ -192,30 +192,31 @@
         
         Only \textbf{$\sim$20\%} of all developers in larger RS repositories are assigned \textbf{BOTH} feature types.
     
-        \vspace*{0.40em}
+        \vspace*{1.40em}
         
         But their commit averages are \textit{\textbf{much higher}...} \par
         \leftskip0cm\relax
         \rightskip0cm\relax
     }
-    \vspace{0.6em}
+    \vspace{1.6em}
     \textbf{Foundations of a RS-10x developer persona?}
     \end{tcolorbox}\par
 
-    \vspace{0.5em}
+    \vspace{1em}
+    What are the \textbf{drawbacks} to using these metrics? How will I get around them? 
     \textit{Find out at my poster!} \par
 
 
-    \vspace{1em}
+    \vspace{1.5em}
 
-    Future work \textbf{expanding developer properties}:  
-    \vspace{0.25em}
-    \begin{itemize}
-    \setlength{\itemindent}{1em}
-    \setlength\itemsep{-0.05em}
-         \item opener/closer behaviours?  
-         \item which files touched in commits?  
-     \end{itemize}}
+    Future work \textbf{expanding developer properties}}  
+    % \vspace{0.25em}
+    % \begin{itemize}
+    % \setlength{\itemindent}{1em}
+    % \setlength\itemsep{-0.05em}
+    %      \item opener/closer behaviours?  
+    %      \item which files touched in commits?  
+    %  \end{itemize}}
      \par
 
      \vspace{3em}
@@ -229,20 +230,20 @@
         \includegraphics[width=0.92\linewidth]{AverageCommitsByCategory.jpg}
     \end{tikzfigure}  
 
-    \vspace*{0.5em}
+    \vspace*{3em}
 
-    \textbf{Personas may explain developer influences} on:  
+    Want to use personas to \textbf{predict effectiveness} \\ of resulting Research Software 
     %\vspace{0.25em}
-    \begin{itemize}
-    \setlength{\itemindent}{1em}
-    \setlength\itemsep{-0.15em}
-         \item software quality metrics   
-         \item project team composition    
-         \item effectiveness of resulting RS   
-     \end{itemize}
+    % \begin{itemize}
+    % \setlength{\itemindent}{1em}
+    % \setlength\itemsep{-0.15em}
+    %      \item software quality metrics   
+    %      \item project team composition    
+    %      \item effectiveness of resulting RS   
+    %  \end{itemize}
      \par
 
-     %\vspace*{0.7em}
+     %\vspace*{.7em}
     
     }
     
