Use updated plot image

--- a/main.tex
+++ b/main.tex
@@ -227,10 +227,10 @@
     
     \begin{tikzfigure}[Exploring developer impact using item assignment \\ and contributions data in 10 RS repositories]
         %\setlength{\belowcaptionskip}{-8pt}
-        \includegraphics[width=0.92\linewidth]{AverageCommitsByCategory.jpg}
+        \includegraphics[width=0.92\linewidth]{bars-mean-commits.png}
     \end{tikzfigure}  
 
-    \vspace*{3em}
+    \vspace*{2em}
 
     Want to use personas to \textbf{predict effectiveness} \\ of resulting Research Software 
     %\vspace{0.25em}
