Updated image to epccnavy/unired/dandelion and added RS to title to match poster. THIS IS THE FINAL TALK VERSION

--- a/main.tex
+++ b/main.tex
@@ -83,8 +83,8 @@
 
 % Ref: https://tex.stackexchange.com/questions/263563/add-logos-beyond-the-title-tikzposter
 %\title{\parbox{\linewidth}{Do Research Software Developer Personas Exist? Are *YOU* an RS-10X? \\ Identifying Distinct Developer/Repository Interaction Types by Mining GitHub Data}}
-\title{\parbox{\linewidth}{\fontseries{bx}\selectfont {\fontsize{98}{98}\selectfont {Identifying Research Software Developer Personas \\Could Create Better RS Developers. Are *YOU* an RS-10X?}}}}
-\newcommand{\subtitle}{Identifying Distinct Developer/Repository Interaction Types by Mining GitHub Data}
+\title{\parbox{\linewidth}{\fontseries{bx}\selectfont {\fontsize{100}{100}\selectfont Identifying Developer Personas Could Create \\ Better Research Software (RS) Development.}}}
+\newcommand{\subtitle}{Are YOU an RS-10X? Identifying Distinct Developer/Repository Interaction Types by Mining GitHub Data}
 %\titlegraphic{\includegraphics{epcclogo.png}}
 
 \author{\textbf{Felicity `Flic' Anderson\textsuperscript{$\dagger$}}, Dr. Julien Sindt\textsuperscript{$\dagger$} and Prof. Neil Chue Hong\textsuperscript{$\dagger$}}
